Fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ VERSION:	1.0.0
 }
 
 .video-text-container {
-    margin-top: 5%;
     color: rgba(40,40,40,1);
 }
 
